# Analysis_MAREX

./: .gitignore  README  README.md  README_Victor  README~
DSTProcessing/: HTCondor.out  README  README~  ntof_prepare_processing_EM.py
GainMonitor/: GainMonitoring01  GainMonitoring01.cc  GainMonitoring01.hh~  GainMonitoring01_hh_ACLiC_dict_rdict.pcm  PlotMonitoring01.hh  PlotMonitoring01.hh~  README  README~  doroot  plot01.hh  plot01_hh.d  plot01_hh_ACLiC_dict_rdict.pcm
GainMonitoring/: .__afs25AF  CreateCalibFiles01  CreateCalibFiles01.cc  CreateCalibFiles01.cc~  GainMonitoring01  GainMonitoring01.cc  GainMonitoring01.cc~  GainMonitoring01.hh  GainMonitoring01.hh~  README  README~  plot01.hh  plot01.hh~
GeneralFun/: AnalysisFunctions01.hh  AnalysisFunctions01.hh~  CalibrationManager.hh  CalibrationManager.hh~  CreateHistoFunctions.hh  CreateHistoFunctions.hh~  FillHistoFunctions.hh  FillHistoFunctions.hh~  GeneralDefinitions.hh  GeneralDefinitions.hh~  GeneralFunctions.hh  GeneralFunctions.hh~  GetSignalsFunctions.hh  GetSignalsFunctions.hh~  MakeCalibrationFunctions.hh  PlotFunctions.hh  PlotFunctions02.hh  PlotFunctions02.hh~  PlotFunctions_Victor.hh  README
Make2DHistos/: DoManyMake2DHisto  DoManyMake2DHistoGain  DoManyMakeMerge2DHisto  Make2DHistos  Make2DHistos.cc  Make2DHistos.cc~  Make2DHistosCorrectedGain  Make2DHistosGainCorrecting  Merge2DHistos  Merge2DHistos.cc  README  README~
Monitor/: CMakeLists.txt  Monitoring.root  README.md  main.cpp
Monitor/include/: Detector.h  Monitor.h  Pulse.h
Monitor/src/: Detector.cpp  Monitor.cpp  Pulse.cpp
(+91 files in other folders)
